<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>birdro_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="minhyeok.bang@skyautonet.com">sky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_freespace_planning_algorithms</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_universe_utils</depend>
  <depend>autoware_map_msgs</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>tier4_map_msgs</depend>
  <depend>geography_utils</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
